--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<p>hellow world</p>
+<html>
+<head>
+<title>Home</title>
+</head>
+<body background="bcg/c.jpg">
+<br>
+<h1 align="center">
+<b><font face="arial" size="40">HELLO, Everyone. This is me.... Fatihah!!!!</font></b>
+</h1>
+<br>
+<p align="center"><img src="photo/home.jpg" width="50%" height="70%" border="1" hspace="5" vspace="5" align="center">
+<br>
+<br>
+<br>
+<table bgcolor="softpink" width="100%" align="center" cellspacing="10" cellpadding="2">
+<tr>
+<td><a href="aboutme.html"><font face="arial" size="5" color="white">Biodata</a></td>
+<td><a href="fam.html"><font face="arial" size="5" color="white">My Family</a></td>
+<td><a href="fren.html"><font face="arial" size="5" color="white">My Friends</a></td>
+<td><a href="edu.html"><font face="arial" size="5" color="white">My Educations</a></td>
+<td><a href="exp.html"><font face="arial" size="5" color="white">My Experience</a></td>
+<td><a href="gal.html"><font face="arial" size="5" color="white">Gallery</a></td>
+<td><a href="others.html"><font face="arial" size="5" color="white">Others</a></td>
+</tr>
+</table>
+<br>
+<br>
+<p align="center"><font face="calibri" size="30" color="teal">Welcome to my personal website. Enjoy surfing at this website to get to know me.</p>
+<br>
+<p align="center"><img src="photo/ins.jpg" width="60%" height="60%" border="1" hspace="5" vspace="5" align="center">
+<br>
+<embed src="music/deathbed.mp3" autostart="true" loop="true" hidden="true"></embed>
+<br>
+<p align="center"><b><font face="arial" size="1" color="red">This website is develop for IMD311 (Introduction To Web Content Management And Design). Any information or materials are used for educational purpose only</p>
+<br>
+
+</body>
+</html>
+
+
